bugs fixed and scrollbar sizes

--- a/src/components/texteditor.css
+++ b/src/components/texteditor.css
@@ -13,13 +13,13 @@
 }
 
 ::-webkit-scrollbar {
-  width: 20px;
+  width: 10px;
 }
 
 ::-webkit-scrollbar-track {
   /* background: linear-gradient(0deg, rgba(231, 248, 47, 1) 0%, rgba(39, 246, 190, 1) 50%, rgba(7, 0, 211, 1) 100%); */
 
-  background: rgb(240, 166, 203);
+  background: rgb(167, 167, 167);
   border-radius: 20px;
 }
 
